--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <script type="module">
+      import tmiJs from "https://cdn.jsdelivr.net/npm/tmi.js@1.8.5/+esm";
+    </script>
+    <script type="module" src="/src/tests.ts"></script>
+    <style>
+      p {
+        line-height: 1.5;
+      }
+
+      img {
+        height: 24px;
+        margin-bottom: -6px;
+      }
+    </style>
   </head>
   <body>
     🤠
