Implement Twitch badges parser

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       import tmiJs from "https://cdn.jsdelivr.net/npm/tmi.js@1.8.5/+esm";
     </script>
     <script type="module" src="/src/tests.ts"></script>
+    <style>
+      body {
+        font-family: sans-serif;
+        line-height: 1.5;
+      }
+    </style>
   </head>
   <body>
     🤠
